重构：将历史记录集合类型从LinkedList改为List，并替换removeFirst调用为remove(0)